# icinga-nsca

./: .gitignore  AUTHORS  Changelog  Makefile.in  README  THANKS  configure  configure.in  init-script.debian.in  init-script.in  nsca.spec  subst.in  update-version
include/: common.h  config.h.in  netutils.h  nsca.h  utils.h
sample-config/: .gitignore  nsca.cfg.in  nsca.xinetd.in  send_nsca.cfg.in
src/: .gitignore  Makefile.in  netutils.c  nsca.c  send_nsca.c  utils.c
t/: NSCATest.pm  README  nsca_basic.cfg
